# string-net-frequency

./: CMakeLists.txt  LICENSE  README.md
data/: README.md  dna.txt
src/: experiments.cpp  experiments.hpp  main.cpp  suffix_arrays.cpp  suffix_arrays.hpp
